k8s-local/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: gateway-service:local
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8000
            initialDelaySeconds: 45
            periodSeconds: 15
