k8s-local/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: notification-service:local
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8081
            initialDelaySeconds: 45
            periodSeconds: 15
