k8s-local/reporting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting-service
  template:
    metadata:
      labels:
        app: reporting-service
    spec:
      containers:
        - name: reporting-service
          image: reporting-service:local
          ports:
            - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8082
            initialDelaySeconds: 45
            periodSeconds: 15
