k8s-local/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
